plugins {
    id 'java'
    id 'com.google.cloud.tools.jib' version '3.4.0'
    id "org.asciidoctor.jvm.convert" version "3.3.2"
}

group = 'com.jnu'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

configurations {
    asciidoctorExtensions
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    testImplementation 'junit:junit:4.13.1'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // websocket client
    implementation 'org.webjars:webjars-locator-core'
    implementation 'org.webjars:sockjs-client:1.0.2'
    implementation 'org.webjars:stomp-websocket:2.3.3'
    implementation 'org.webjars:bootstrap:3.3.7'
    implementation 'org.webjars:jquery:3.1.1-1'
    // XSS validator
    implementation 'org.jsoup:jsoup:1.13.1'

    implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
    //    testImplementation 'org.junit.jupiter:junit-jupiter-api:4.13'
    //    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    implementation project(':Recruit-Common')
    implementation project(':Recruit-Domain')
    implementation project(':Recruit-Infrastructure')

    testRuntimeOnly 'com.h2database:h2'
}

jib {
    def serverPort = "8080"
    def dockerUsername = System.getenv("DOCKERHUB_USERNAME")
    def dockerPassword = System.getenv("DOCKERHUB_PASSWORD")
    def imageName = System.getenv("IMAGE_NAME")
    def imageTag = System.getenv("IMAGE_TAG")

    from {
        image = 'amazoncorretto:17-alpine3.17-jdk'
    }
    to {
        image = dockerUsername + "/" + imageName
        tags = ['latest'] // docker tag ('latest'와 'github-action으로 받은 태그' 모두에 업로드)
        auth { // docker auth
            username = dockerUsername ? dockerUsername : ""
            password = dockerPassword ? dockerPassword : ""
        }
    }
    container {
        jvmFlags = [
                '-Dspring.profiles.active=local',
                '-Dserver.port=' + serverPort,
                '-Xms2G', '-Xmx2G',
                '-XX:+UseG1GC',
                '-XX:+UseContainerSupport',
                '-XX:+DisableExplicitGC',
                '-server'
        ]
        environment = [
                'MYSQL_HOST'    : System.getenv("MYSQL_HOST"),
                'MYSQL_PORT'    : System.getenv("MYSQL_PORT"),
                'MYSQL_DATABASE': System.getenv("MYSQL_DATABASE"),
                'MYSQL_USERNAME': System.getenv("MYSQL_USERNAME"),
                'MYSQL_PASSWORD': System.getenv("MYSQL_PASSWORD"),
                'JWT_SECRET'    : System.getenv("JWT_SECRET")
        ]
        ports = ['8080']
    }
    ext {
        // snippetsDir : 테스트 실행시 생성되는 응답을 저장할 디렉토리 지정
        set('snippetsDir', file("build/generated-snippets"))
    }

// === ⭐ Spring Rest Docs ===
    tasks.named('test') {
        systemProperty 'file.encoding', 'UTF-8'
        outputs.dir snippetsDir
        useJUnitPlatform()
    }

// (7) asciidoctor를 사용하기 위해서 asciidoctor task에 asciidoctorExtensions 설정
    tasks.named('asciidoctor') {
        configurations "asciidoctorExtensions"
        inputs.dir snippetsDir
        dependsOn test
    }

// (8) asciidoctor task 실행시 생성된 html 파일을 src/main/resources/static/docs 디렉토리에 카피
    task copyDocument(type: Copy) {
        dependsOn asciidoctor            // (8-1)
        from file("${asciidoctor.outputDir}")   // (8-2)
        into file("src/main/resources/static/docs")   // (8-3)
    }

    build {
        dependsOn copyDocument  // (9) 빌드되기전 copyDocument task 실행
    }

// (10)2121
    bootJar {
        dependsOn copyDocument    // (10-1) bootJar 실행되기전 copyDocument task 실행
        from("${asciidoctor.outputDir}") {  // (10-2) bootJar에 asciidoctor task에서 생성된 html 파일 추가
            into 'static/docs'     // (10-3) bootJar에 추가될 경로
        }
        enabled = false
    }
    jar.enabled = true
}